--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello
+<DOCTYPE! html>
+<html>
+<head>
+	<title>Jade Read</title>
+</head>
+<body>
+
+<h1>A Bit About Jade Read</h1>
+
+<img src="https://si0.twimg.com/profile_images/3561767463/bf0c0be1f717bb2313a7e50faf74fd72.jpeg">
+
+<h2>Interests</h2>
+
+	<ul>
+
+<li>Cooking - especially <strong>Japanese</strong> and <strong>Italian</strong></li>
+<li>Travelling</li>
+<li>Technology</li>
+<li>Biology, conservation and the environment</li>
+<li>Photography</li>
+</ul>
+
+</body>
+</html>
+
+
+
