Changed heading to Jade Read

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>A Bit About Jade Read</h1>
+<h1>Jade Read</h1>
 
 <img src="https://si0.twimg.com/profile_images/3561767463/bf0c0be1f717bb2313a7e50faf74fd72.jpeg">
 
