Deleted some of list

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<ul>
 
-<li>Cooking - especially <strong>Japanese</strong> and <strong>Italian</strong></li>
+<li>Cooking 
 <li>Travelling</li>
 <li>Technology</li>
 <li>Biology, conservation and the environment</li>
