--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 
 	<ul>
 
-<li>Cooking 
+<li>Cooking </li>
 <li>Travelling</li>
 <li>Technology</li>
-<li>Biology, conservation and the environment</li>
 <li>Photography</li>
 </ul>
 
